--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <body>
     <div class="#header">
-      <img src="/storage/emulated/0/User Portfolio/images/sunset(1).jpeg">
+      <img src="sunset(1).jpeg">
 
       <div class="centered">MY PERSONAL PORTFOLIO
         <hr> Samantha L. Lopez | BSIT - 1B</div>
