--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <div id="section1">
     <h1>About Me</h1>
-    <img src="/storage/emulated/0/User Portfolio/images/profile_pic.jpeg" alt="pic">
+    <img src="profile_pic.jpeg" alt="pic">
 
     <p> Hello, I'm Samantha L. Lopez, 18 years old. I was born on March 28, 2002
       <br> in Pinagbuhatan, Pasig City. I'm an I.T college student at Pamantasan
@@ -51,7 +51,7 @@
 
   <div id="section2">
     <h1>Family Background</h1>
-    <img src="/storage/emulated/0/User Portfolio/images/family.jpeg" alt="pic">
+    <img src="family.jpeg" alt="pic">
 
     <p> This is my family. My mother's name is Jacqueline Lopez,
       <br> she is 43 years old. She became the mother and father to us
@@ -76,7 +76,7 @@
 
   <div id="section3">
     <h1>Hobbies, Skills and Talent</h1>
-    <img src="/storage/emulated/0/User Portfolio/images/hobbies.png" alt="str">
+    <img src="hobbies.png" alt="str">
 
     <p> My hobbies are making creative art such as letterings and
       <br>doing some crafts like 3d origami. Solving Crossword
@@ -92,7 +92,7 @@
 
   <div id="section4">
     <h1>Strength and Weaknesses in terms of IT field</h1>
-    <img src="/storage/emulated/0/User Portfolio/images/strwkn.png">
+    <img src="strwkn.png">
 
     <p> My strength is that I am a hard working person.
       <br> I have a small background in creating a website
@@ -110,7 +110,7 @@
 
   <div id="section5">
     <h1>Career or Job Position do you see yourself after Graduation</h1>
-    <img src="/storage/emulated/0/User Portfolio/images/developer.jpeg">
+    <img src="developer.jpeg">
     <p>
       I see myself as a web developer after our graduation. As an IT student,
       <br>I know this job is difficult but I also thought that I will learn
